--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="NotionPress - India's #1 Self Publishing Platform" />
-        <title>NotionPress - Publish Your Book</title>
+        <meta name="description" content="Natals Publication - India's Self Publishing Platform" />
+        <title>Natals Publication - Publish Your Book</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
